fix(css): re-use old --color-scrollbar variable

--- a/apps/theming/css/default.css
+++ b/apps/theming/css/default.css
@@ -22,7 +22,6 @@
   --color-text-light: var(--color-main-text);
   /** @deprecated use `--color-text-maxcontrast` instead */
   --color-text-lighter: var(--color-text-maxcontrast);
-  --color-scrollbar: rgba(34,34,34, .15);
   --color-error: #DB0606;
   --color-error-rgb: 219,6,6;
   --color-error-hover: #df2525;
