--- a/core/css/styles.scss
+++ b/core/css/styles.scss
@@ -20,6 +20,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 	font-family: inherit;
 	vertical-align: baseline;
 	cursor: default;
+	scrollbar-color: var(--color-scrollbar);
 }
 
 .js-focus-visible :focus:not(.focus-visible) {
